objects/ASI_CRM_Sub_brand_group__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_CN_Chinese_Name__c</fullName>
        <label>Chinese Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Sequence__c</fullName>
        <label>Sequence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Sub_brand_Group_Code__c</fullName>
        <label>Sub-brand Group Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_English_Name__c</fullName>
        <label>English Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Sub-brand Group</label>
    <listViews>
        <fullName>ASI_CRM_CN_Sub_brand_Group</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Chinese_Name__c</columns>
        <columns>ASI_CRM_English_Name__c</columns>
        <columns>ASI_CRM_CN_Sub_brand_Group_Code__c</columns>
        <columns>ASI_CRM_CN_Sequence__c</columns>
        <columns>ASI_CRM_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Sub_brand_group__c.asi_crm_CN_Sub_brand_GROUP</value>
        </filters>
        <label>CN Sub-brand Group</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Sub-brand Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sub-brand Groups</pluralLabel>
    <recordTypes>
        <fullName>asi_crm_CN_Sub_brand_GROUP</fullName>
        <active>true</active>
        <label>CN Sub-brand GROUP</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>